--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <div class="container">
-        <h1 class="title"></h1>
+        <h1 class="title">Помни,улюбка - главное оружие против плохого настроения!!</h1>
       </div>
     </div>
   </body>
