fix:i corrected a mistake in the text and add: added a picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <div>
       <div class="container">
-        <h1 class="title">Помни,улюбка - главное оружие против плохого настроения!!</h1>
+        <div class="main">
+          <h1 class="title">Помни, улыбка - главное оружие против плохого настроения!!</h1>
+          <img class="img" src="./img/smail.jpg" alt="Smale" />
+        </div>
       </div>
     </div>
   </body>
