add: added block

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="main">
           <h1 class="title">Помни, улыбка - главное оружие против плохого настроения!!</h1>
           <img class="img" src="./img/smail.jpg" alt="Smale" />
+          <h2 class="tit">И небольшой мем для поднятия настроения))</h2>
+          <img src="./img/photo.jpg" alt="Photo" />
         </div>
       </div>
     </div>
