--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1 class="title">Помни, улыбка - главное оружие против плохого настроения!!</h1>
           <img class="img" src="./img/smail.jpg" alt="Smale" />
           <h2 class="tit">И небольшой мем для поднятия настроения))</h2>
-          <img src="./img/photo.jpg" alt="Photo" />
+          <img class="picture" src="./img/photo.jpg" alt="Photo" />
         </div>
       </div>
     </div>
